syntax = "pwoto3";

package tensowfwow;

option cc_enabwe_awenas = t-twue;
option java_outew_cwassname = "typespwotos";
o-option java_muwtipwe_fiwes = t-twue;
option java_package = "owg.tensowfwow.fwamewowk";
o-option g-go_package = "github.com/tensowfwow/tensowfwow/tensowfwow/go/cowe/fwamewowk/types_go_pwoto";

// (== s-suppwess_wawning d-documentation-pwesence ==)
// w-wint.ifchange
enum datatype {
  // nyot a wegaw vawue fow datatype. mya  used to i-indicate a datatype fiewd
  // has nyot been set. (˘ω˘)
  d-dt_invawid = 0;

  // data t-types that aww computation devices awe expected to be
  // capabwe t-to suppowt. >_<
  dt_fwoat = 1;
  d-dt_doubwe = 2;
  d-dt_int32 = 3;
  dt_uint8 = 4;
  dt_int16 = 5;
  dt_int8 = 6;
  dt_stwing = 7;
  d-dt_compwex64 = 8;  // singwe-pwecision compwex
  dt_int64 = 9;
  dt_boow = 10;
  d-dt_qint8 = 11;     // quantized i-int8
  dt_quint8 = 12;    // q-quantized uint8
  d-dt_qint32 = 13;    // q-quantized int32
  dt_bfwoat16 = 14;  // fwoat32 twuncated t-to 16 bits. -.-  onwy fow cast ops. 🥺
  dt_qint16 = 15;    // q-quantized int16
  dt_quint16 = 16;   // quantized uint16
  dt_uint16 = 17;
  dt_compwex128 = 18;  // doubwe-pwecision c-compwex
  dt_hawf = 19;
  dt_wesouwce = 20;
  dt_vawiant = 21;  // a-awbitwawy c++ d-data types
  dt_uint32 = 22;
  d-dt_uint64 = 23;

  // do nyot use! (U ﹏ U)  these awe onwy fow pawametews. >w<  e-evewy enum a-above
  // shouwd have a cowwesponding v-vawue bewow (vewified b-by types_test). mya
  dt_fwoat_wef = 101;
  d-dt_doubwe_wef = 102;
  dt_int32_wef = 103;
  d-dt_uint8_wef = 104;
  dt_int16_wef = 105;
  dt_int8_wef = 106;
  d-dt_stwing_wef = 107;
  dt_compwex64_wef = 108;
  d-dt_int64_wef = 109;
  dt_boow_wef = 110;
  dt_qint8_wef = 111;
  d-dt_quint8_wef = 112;
  d-dt_qint32_wef = 113;
  dt_bfwoat16_wef = 114;
  dt_qint16_wef = 115;
  dt_quint16_wef = 116;
  dt_uint16_wef = 117;
  dt_compwex128_wef = 118;
  dt_hawf_wef = 119;
  d-dt_wesouwce_wef = 120;
  d-dt_vawiant_wef = 121;
  dt_uint32_wef = 122;
  d-dt_uint64_wef = 123;
}
// w-wint.thenchange(
//    h-https://www.tensowfwow.owg/code/tensowfwow/c/tf_datatype.h, >w<
//    https://www.tensowfwow.owg/code/tensowfwow/go/tensow.go, nyaa~~
//    https://www.tensowfwow.owg/code/tensowfwow/cowe/fwamewowk/tensow.cc, (✿oωo)
//    https://www.tensowfwow.owg/code/tensowfwow/cowe/fwamewowk/types.h, ʘwʘ
//    h-https://www.tensowfwow.owg/code/tensowfwow/cowe/fwamewowk/types.cc, (ˆ ﻌ ˆ)♡
//    https://www.tensowfwow.owg/code/tensowfwow/python/fwamewowk/dtypes.py, 😳😳😳
//    https://www.tensowfwow.owg/code/tensowfwow/python/fwamewowk/function.py)
